tests/e2e/pass/m14_struct_arr.ep
# EXIT: 150

type Token = {
    kind: i64
    value: i64
}

fun main(): void {
    let tokens = new Token[1]
    tokens[0] = new Token {}
    tokens[0].kind = 100
    tokens[0].value = 50
    exit(tokens[0].kind + tokens[0].value)
}
