tests/e2e/fail/integer_bool_conversion.ep
# COMPILE_ERROR: integer conversion 'i64' requires an integer, got bool
fun main(): void {
    let value = i64(true)
}
